<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_guide_bg"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/root_view_width"
        android:layout_height="@dimen/root_view_height">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <include
                android:id="@+id/layout_line"
                layout="@layout/layout_user_guide_line"
                android:visibility="invisible" />

            <include
                android:id="@+id/layout_home"
                layout="@layout/layout_user_guide_home"
                android:visibility="visible" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_center_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:lineSpacingExtra="16dp"
            android:text="@string/user_guide_end"
            android:textColor="@color/color_white"
            android:textSize="28sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_key_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_guide_start"
                android:textColor="@color/color_white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_key_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_guide_skip"
                android:textColor="@color/color_black_deep"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>